--- a/package.json
+++ b/package.json
@@ -80,5 +80,8 @@
     "listhen": "^1.9.0",
     "nuxt": "^4.0.0",
     "ofetch": "^1.4.1"
+  },
+  "resolutions": {
+    "@norbiros/nuxt-auto-form": "workspace:*"
   }
 }
