--- a/docs/package.json
+++ b/docs/package.json
@@ -9,21 +9,21 @@
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
-    "@iconify-json/heroicons": "^1.2.2",
-    "@iconify-json/simple-icons": "^1.2.43",
-    "@nuxt/content": "^3.6.3",
-    "@nuxt/fonts": "^0.11.4",
-    "@nuxt/image": "^1.10.0",
-    "@nuxt/ui-pro": "^3.2.0",
-    "better-sqlite3": "^12.2.0",
-    "nuxt": "^4.0.0",
-    "nuxt-og-image": "^5.1.9",
+    "@iconify-json/heroicons": "^1.2.3",
+    "@iconify-json/simple-icons": "^1.2.59",
+    "@nuxt/content": "^3.8.2",
+    "@nuxt/fonts": "^0.12.1",
+    "@nuxt/image": "^2.0.0",
+    "@nuxt/ui": "^4.2.1",
+    "better-sqlite3": "^12.4.6",
+    "nuxt": "^4.2.1",
+    "nuxt-og-image": "^5.1.12",
     "nuxt-open-fetch": "workspace:*"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^1.6.0",
-    "eslint": "^9.31.0",
+    "@nuxt/eslint": "^1.10.0",
+    "eslint": "^9.39.1",
     "nuxt-content-twoslash": "^0.1.2",
-    "vue-tsc": "^3.0.3"
+    "vue-tsc": "^3.1.5"
   }
 }
