--- a/package.json
+++ b/package.json
@@ -59,29 +59,29 @@
     "typecheck": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "@nuxt/kit": "^4.0.0",
+    "@nuxt/kit": "^4.2.1",
     "defu": "^6.1.4",
     "ohash": "^2.0.11",
-    "openapi-typescript": "^7.8.0",
+    "openapi-typescript": "^7.10.1",
     "openapi-typescript-helpers": "^0.0.15",
     "scule": "^1.3.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.17.0",
-    "@nuxt/devtools": "^2.6.2",
-    "@nuxt/eslint-config": "^1.6.0",
-    "@nuxt/module-builder": "^1.0.1",
-    "@nuxt/schema": "^4.0.0",
-    "@types/node": "^24.0.15",
+    "@antfu/eslint-config": "^6.2.0",
+    "@nuxt/devtools": "^3.1.0",
+    "@nuxt/eslint-config": "^1.10.0",
+    "@nuxt/module-builder": "^1.0.2",
+    "@nuxt/schema": "^4.2.1",
+    "@types/node": "^24.10.1",
     "changelogen": "^0.6.2",
-    "eslint": "^9.31.0",
-    "h3": "^1.15.3",
-    "happy-dom": "^18.0.1",
+    "eslint": "^9.39.1",
+    "happy-dom": "^20.0.10",
     "listhen": "^1.9.0",
-    "nuxt": "^4.0.0",
-    "ofetch": "^1.4.1"
+    "nuxt": "^4.2.1",
+    "ofetch": "^1.5.1"
   },
   "resolutions": {
-    "@norbiros/nuxt-auto-form": "workspace:*"
+    "@norbiros/nuxt-auto-form": "workspace:*",
+    "h3": "^1.15.4"
   }
 }
