--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
 
       - run: npm i -g --force corepack@latest && corepack enable
 
-      - run: pnpm ci
+      - run: pnpm install
       - run: pnpm lint
       - run: pnpm test
       - run: pnpm typecheck
